Website new updates with tenant pages

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -52,7 +52,7 @@ File: Layout CSS
 
 .testimonials{}
 .testimonials article{display:block; padding-bottom:10px; text-align:center;}
-.testimonials article img, .testimonials article blockquote, .testimonials article .starating{margin-bottom:20px;}
+.testimonials article img, .testimonials article blockquote, .testimonials article .starating{margin-bottom:0px;}
 .testimonials article .starating li{display:inline-block; margin-right:3px;}
 .testimonials article .starating li:last-child{margin-right:0;}
 .testimonials article .heading{}
@@ -214,7 +214,7 @@ td{border-width:0 1px;}
 .faico li:last-child{margin-right:0;}
 .faico a{display:inline-block; width:36px; height:36px; line-height:36px; font-size:18px; text-align:center;}
 
-.faico a{color:#FFFFFF; background-color:#E03F3F;}
+.faico a{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 .faico a:hover{}
 
 .faicon-dribble:hover{background-color:#EA4C89;}
@@ -234,25 +234,25 @@ td{border-width:0 1px;}
 
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
-body{color:#FFFFFF; background-color:#E03F3F;}
-a{color:#E03F3F;}
+body{color:#FFFFFF; background-color:rgb(40, 146, 216);}
+a{color:rgb(40, 146, 216);}
 a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
-label span{color:#FF0000; background-color:inherit;}
-input:focus, textarea:focus, *:required:focus{border-color:#E03F3F;}
+label span{color:rgb(40, 146, 216); background-color:inherit;}
+input:focus, textarea:focus, *:required:focus{border-color:rgb(40, 146, 216);}
 .overlay{color:#FFFFFF; background-color:inherit;}
 .overlay::after{color:inherit; background-color:rgba(0,0,0,.55);}
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#E03F3F; border-color:#E03F3F;}
+.btn, .btn.inverse:hover{color:#FFFFFF; background-color:rgb(40, 146, 216); border-color: rgb(40, 146, 216);}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
 
 
 /* Rows */
-.row1{color:#474747; background-color:#FFFFFF; border-top-color:#E03F3F; border-bottom-color:#D7D7D7;}
+.row1{color:#474747; background-color:#FFFFFF; border-top-color:rgb(40, 146, 216)E03F3F; border-bottom-color:#D7D7D7;}
 .row2{color:#474747; background-color:#FFFFFF;}
 .row3{color:#474747; background-color:#F5F5F5;}
 .row4{color:#FFFFFF; background-color:#222222;}
-.row5, .row5 a{color:#FFFFFF; background-color:#E03F3F;}
+.row5, .row5 a{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 
 
 /* Header */
@@ -264,11 +264,11 @@ input:focus, textarea:focus, *:required:focus{border-color:#E03F3F;}
 .testimonials article .starating li .fa.neutral{color:#D7D7D7;}
 
 .services article{color:inherit; background-color:#FFFFFF;}
-.services article:hover{color:#FFFFFF; background-color:#E03F3F;}
+.services article:hover{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 .services article:hover a{color:inherit;}
 
 .elements article i{border-color:#D7D7D7;}
-.elements article:hover i{color:#FFFFFF; background-color:#E03F3F; border-color:#E03F3F;}
+.elements article:hover i{color:#FFFFFF; background-color:rgb(40, 146, 216); border-color:rgb(40, 146, 216);}
 
 
 /* Footer */
@@ -279,26 +279,26 @@ input:focus, textarea:focus, *:required:focus{border-color:#E03F3F;}
 
 /* Navigation */
 #mainav li a{color:inherit;}
-#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#E03F3F; background-color:inherit;}
+#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:rgb(40, 146, 216); background-color:inherit;}
 #mainav li li a, #mainav .active li a{color:inherit; background-color:rgba(255,255,255,.85); border-color:rgba(255,255,255,.6);}
-#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#E03F3F;}
+#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 #mainav form select{color:#FFFFFF; background-color:#000000; border-color:rgba(0,0,0,.5);}
 
 #breadcrumb a{color:inherit; background-color:inherit;}
-#breadcrumb li:last-child a{color:#E03F3F;}
+#breadcrumb li:last-child a{color:rgb(40, 146, 216);}
 
 .container .sidebar nav a{color:inherit; border-color:#D7D7D7;}
-.container .sidebar nav a:hover{color:#E03F3F;}
+.container .sidebar nav a:hover{color:rgb(40, 146, 216);}
 
 .pagination a, .pagination strong{border-color:#D7D7D7;}
-.pagination .current *{color:#FFFFFF; background-color:#E03F3F;}
+.pagination .current *{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 
-#backtotop{color:#FFFFFF; background-color:#E03F3F;}
+#backtotop{color:#FFFFFF; background-color:rgb(40, 146, 216);}
 
 
 /* Tables + Comments */
 table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
-#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#E03F3F;}
+#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:rgb(40, 146, 216);}
 th{color:#FFFFFF; background-color:#373737;}
 tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FBFBFB;}
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
